<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Register">


  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:background="@drawable/logottu"
      android:contentDescription="@string/todo"
      app:layout_constraintBottom_toTopOf="@+id/editTextUsernamereg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/editTextUsernamereg"
      android:layout_width="293dp"
      android:layout_height="43dp"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:autofillHints=""
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_regicon"
      android:drawableLeft="@drawable/ic_regicon"
      android:drawablePadding="10dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/enter_username"
      android:inputType="textPersonName"
      android:padding="10dp"
      android:textColorLink="#00E4DCDC"
      app:layout_constraintBottom_toTopOf="@+id/editTextEmailreg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

  <EditText
      android:id="@+id/editTextEmailreg"
      android:layout_width="292dp"
      android:layout_height="41dp"
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_mail"
      android:drawableLeft="@drawable/ic_mail"
      android:drawablePadding="5dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/enter_your_email"
      android:importantForAutofill="no"
      android:inputType="textEmailAddress"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextReg_no"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextUsernamereg" />

  <EditText
      android:id="@+id/editTextAgereg"
      android:layout_width="291dp"
      android:layout_height="43dp"
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_age"
      android:drawableLeft="@drawable/ic_age"
      android:drawablePadding="5dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/enter_your_age"
      android:importantForAutofill="no"
      android:inputType="number"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextPasswordreg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextCourse" />

  <EditText
      android:id="@+id/editTextPasswordreg"
      android:layout_width="291dp"
      android:layout_height="39dp"
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_passwordicon"
      android:drawableLeft="@drawable/ic_passwordicon"
      android:drawablePadding="5dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/enter_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextPasswordconfirm"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextAgereg"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/editTextPasswordconfirm"
      android:layout_width="290dp"
      android:layout_height="41dp"
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_passwordicon"
      android:drawableLeft="@drawable/ic_passwordicon"
      android:drawablePadding="5dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/confirm_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextPasswordreg" />

  <Button
      android:id="@+id/buttonRegister"
      android:layout_width="284dp"
      android:layout_height="43dp"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:background="@drawable/btnround"
      android:text="@string/register"
      app:layout_constraintBottom_toTopOf="@+id/textViewToLogin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextPasswordconfirm" />

  <TextView
      android:id="@+id/textViewToLogin"
      android:layout_width="124dp"
      android:layout_height="68dp"
      android:clickable="true"
      android:focusable="true"
      android:gravity="center"
      android:textStyle="bold"
      android:text="@string/login_here"
      android:textColor="@color/colorPrimary"
      android:textSize="17sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

  <EditText
      android:id="@+id/editTextReg_no"
      android:layout_width="292dp"
      android:layout_height="41dp"
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_reg_no"
      android:drawableLeft="@drawable/ic_reg_no"
      android:drawablePadding="5dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/enter_registration_number"
      android:inputType="textPersonName"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextCourse"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextEmailreg"
      app:layout_constraintVertical_bias="0.0" />

  <EditText
      android:id="@+id/editTextCourse"
      android:layout_width="292dp"
      android:layout_height="41dp"
      android:background="@drawable/btnrounwhite"
      android:drawableStart="@drawable/ic_course"
      android:drawableLeft="@drawable/ic_course"
      android:drawablePadding="5dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/enter_course"
      android:inputType="textPersonName"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/editTextAgereg"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextReg_no" />

</androidx.constraintlayout.widget.ConstraintLayout>