<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bckgr"
    tools:context=".Login">


    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailreset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextEmailreset"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/btnrounwhite"
        android:drawableStart="@drawable/ic_regicon"
        android:drawableLeft="@drawable/ic_regicon"
        android:drawablePadding="5dp"
        android:fontFamily="monospace"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColorHint="?android:attr/textColorHint"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/btnrounwhite"
        android:drawableStart="@drawable/ic_passwordicon"
        android:drawableLeft="@drawable/ic_passwordicon"
        android:drawablePadding="5dp"
        android:fontFamily="monospace"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="?android:attr/textColorHint"
        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailreset"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/btnround"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#FFFBF8"
        app:layout_constraintBottom_toTopOf="@+id/textViewresetpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/textViewToLog"
        android:layout_width="124dp"
        android:layout_height="23dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/register_here"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewresetpassword" />

    <TextView
        android:id="@+id/textViewresetpassword"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textViewToLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset"
        app:layout_constraintVertical_bias="0.31" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="174dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/logottu" />


</androidx.constraintlayout.widget.ConstraintLayout>